discover tymon/jwt-auth

--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,12 @@
     "extra": {
         "laravel": {
             "providers": [
-                "CrCms\\User\\Providers\\UserServiceProvider"
             ],
             "aliases": {
-            }
+            },
+            "dont-discover": [
+                "tymon/jwt-auth"
+            ]
         }
     },
     "repositories": {
