--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "CrCms\\User\\Tests\\": "tests/"
         }
     },
     "extra": {
@@ -33,10 +33,18 @@
             ]
         }
     },
+    "scripts": {
+        "post-autoload-dump": [
+            "@php ../../../bin/artisan jwt:secret"
+        ]
+    },
     "repositories": {
         "packagist": {
             "type": "composer",
             "url": "https://packagist.laravel-china.org"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7.2"
     }
 }
